--- a/css/style.css
+++ b/css/style.css
@@ -46,10 +46,12 @@ body,
 .col-xs-4 {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #eee;
-  background-color: rgba(86,61,124,.15);
-  border: 1px solid #ddd;
-  border: 1px solid rgba(86,61,124,.2);
+  /*background-color: #eee;
+  background-color: rgba(86,61,124,.15);*/
+  border: 0px solid #ddd;
+  border: 0px solid rgba(86,61,124,.2);
+  text-align: center;
+  vertical-align: baseline;
 }
 
 .container .navbar-header,
