--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ body,
   min-width: 970px;
 }
 
+.checked {
+    color: orange;
+}
+
 /* Don't let the lead text change font-size. */
 .lead {
   font-size: 16px;
@@ -262,3 +266,4 @@ body,
 .form-inline .has-feedback .form-control-feedback {
   top: 0;
 }
+
