--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 /* Account for fixed navbar */
 
 body {
-  padding-top: 20px;
+  padding-top: 20px; /*70 px */
   padding-bottom: 30px;
   font-family: "Times New Roman";
 }
