--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,10 @@ body,
 }
 
 .cd {
-     background-color: black;
-   color: white;
+     background-color: white;
+   color: black;
    border: solid;
-   border-width: 1px;
+   border-width: 0px;
    border-color: black;
 
   margin-bottom: 30px;
